--- a/book.bib
+++ b/book.bib
@@ -905,7 +905,7 @@ year = {1995}
 
 @article{kemmeren2016,
   title={Effectiveness of blended depression treatment for adults in specialised mental healthcare: study protocol for a randomised controlled trial},
-  author={Kemmeren, LL and {Van Schaik}, DJF and Riper, H and Kleiboer, AM and Bosmans, Judith E and Smit, Johannes H},
+  author={Kemmeren, L. and {Van Schaik}, DJF and Riper, H and Kleiboer, AM and Bosmans, Judith E and Smit, Johannes H},
   journal={BMC psychiatry},
   volume={16},
   number={1},
@@ -1256,7 +1256,7 @@ year = {1999}
 
 @article{pot2016,
   title={Effect of virtual reality exposure therapy on social participation in people with a psychotic disorder (VRETp): Study protocol for a randomized controlled trial},
-  author={Pot-Kolder, Roos and Veling, Wim and Geraets, Chris and {Van der Gaag}, Mark},
+  author={Pot-Kolder, Roos MCA and Veling, Wim and Geraets, Chris and {Van der Gaag}, Mark},
   journal={Trials},
   volume={17},
   number={1},
