--- a/lmm.Rmd
+++ b/lmm.Rmd
@@ -54,9 +54,9 @@ To understand analysis techniques, it often helps to apply the technique to
 simulated data, in which parameters of interest are known. Here, we will use the
 `sim_ema` function from package `emaph`, to simulate EMA mood assessments
 of 100 participants, who rate their mood, three times per day, for one week. As
-you can learn from the documentation of `sim_ema` (see `?sim\_ema`), the
+you can learn from the documentation of `sim_ema` (see `?sim_ema`), the
 function expects at least two arguments: the definition of a sample plan (see
-`?sample\_plan`), and a specification of the data-generating model, in the form
+`?sample_plan`), and a specification of the data-generating model, in the form
 of a list defining fixed effects, the random effects, and residual variance
 (i.e, the error).
 
@@ -77,7 +77,7 @@ d1 <- sim_ema(plan,
 ```
 
 From the code, you learn that we set the mean mood (intercept~g~) to 5, the
-variance around this mean - var(intercept~i~) - to 1, and the variance around
+variance around this mean - var(intercept~p~) - to 1, and the variance around
 these means within participants - the error - to .5. Figure \@ref(fig:fig9a)
 shows EMA mood ratings of the first 6 participants in the simulated data set,
 which we can use to check the simulation. As specified, mean mood ratings of the
@@ -106,7 +106,7 @@ parameters are detected. For this, we will use the `lme` function, from package
 The first argument of the lme function, `Y ~ 1`, specifies the fixed 'effect'
 (in this case: the mean intercept). The second argument, `random =~ 1 | id`
 specifies the random effect. In this model, intercepts are allowed to vary
-between participants. The fitted model is assigned to a variable ('fm'), which
+between participants. The fitted model is assigned to a variable (`fm`), which
 we will use later to study the fitted model.
 
 ```{r cs9b}
@@ -234,12 +234,12 @@ the mood ratings increased. Suppose the two data-sets reflect the data that you
 collect in a two-group RCT, in which you compare the effects of a mental health
 intervention (data-set 2) against a waiting list condition (data-set 1). By
 combining the two data-sets, we can illustrate how to conduct a group comparison
-with 'lme'.
+with `lme`.
 
-Since the two data-sets are already available (in d1 and d2), the new data set
+Since the two data-sets are already available (in variables `d1` and `d2`), the new data set
 can be created with just three lines of code (below). In the first line, the
-'rbind' function is used to combine the rows of data-set 1 and 2 into a new
-variable: d3. The second line adds a group indicator to d3. The third line
+`rbind` function is used to combine the rows of data-set 1 and 2 into a new
+variable: d3. The second line adds a group indicator to `d3`. The third line
 updates the ids of the participants in the second group, to differentiate the
 participants in the second group from the participants in the first group.
 
@@ -251,7 +251,7 @@ d3$id[d3$group == "treatment"] <- d3$id[d3$group == "treatment"] + 100
 ```
 
 The effect of the intervention can be tested by adding a (fixed) 'time * group'
-interaction effect to the model. This effect, we know, is .5, and, as can be
+interaction effect to the model. This effect, we know, is 0.5, and, as can be
 seen, this is what the model picks up:
 
 ```{r cs9j}
