--- a/aph-catalogue.Rmd
+++ b/aph-catalogue.Rmd
@@ -29,7 +29,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | Van Ballegooijen    | CASPAR                  | VU                  |
 | **Sleep**           |                         |                     |
 | Van Someren         |                         | AMC / GGZ inGeest   |
-| **Symptom Networks**|                         |                     |
+| **Stress & Emotion**|                         |                     |
 | De Geus         | VU-AMS                      | VU                  |
 
 
@@ -118,7 +118,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 |                   | http://research.vumc.nl/en/persons/lise-kemmeren |
 
 
-## Psychosomatic symptoms
+## Psychosomatic Symptoms
 
 ### Knoop
 \index{Chronic Fatigue}
@@ -263,7 +263,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 |             | http://herseninstituut.nl/over-ons/de-organisatie/medewerkers/wisse-van-der-meijden/ |
 
 
-## Ambulatory Assessment
+## Stress & Emotion
 
 ### De Geus
 \index{VU-AMS}
