fix allport ref

--- a/book.bib
+++ b/book.bib
@@ -16,11 +16,12 @@
   url             = {http://linkinghub.elsevier.com/retrieve/pii/S0272735812000712 http://www.ncbi.nlm.nih.gov/pubmed/22721999}}
   
 
-@article{allport1937,
+@book{allport1937,
   title={Personality: A psychological interpretation.},
   author={Allport, Gordon Willard},
   year={1937},
-  publisher={Holt}
+  location = {Oxford, England},
+  publisher={Holt and Company}
 }
 
 @misc{aph_qh,
