ref cleanup (corrections, doi's added)

--- a/book.bib
+++ b/book.bib
@@ -55,6 +55,7 @@
   number={7},
   pages={603--609},
   year={2017},
+  doi = {10.1002/da.22646},
   publisher={Wiley Online Library}
 }
 
@@ -179,6 +180,7 @@
   number={2-3},
   pages={165--170},
   year={2006},
+  doi = {10.1016/j.jad.2005.12.050},
   publisher={Elsevier}
 }
 
@@ -249,6 +251,7 @@
   number={5},
   pages={911--921},
   year={2011},
+  doi = {10.1017/S0033291710001558},
   publisher={Cambridge University Press}
 }
 
@@ -371,17 +374,15 @@
   url     = {http://studiolab.ide.tudelft.nl/diopd/library/tools/pick-a-mood/},
 }
 
-@misc{Doherty2018,
-author = {Doherty, Aiden},
-booktitle = {The Lancet Psychiatry},
-doi = {10.1016/S2215-0366(18)30172-X},
-issn = {22150374},
-pmid = {29776773},
-title = {{Circadian rhythms and mental health: wearable sensing at scale}},
-year = {2018}
+@article{Doherty2018,
+  author = {Doherty, Aiden},
+  journal = {The Lancet Psychiatry},
+  doi = {10.1016/S2215-0366(18)30172-X},
+  issn = {22150374},
+  pmid = {29776773},
+  title = {{Circadian rhythms and mental health: wearable sensing at scale}},
+  year = {2018}
 }
-
-
 
 
 @article{Dogan2017,
@@ -391,6 +392,7 @@ year = {2018}
   volume={19},
   number={7},
   year={2017},
+  doi = {10.2196/jmir.7006},
   publisher={JMIR Publications Inc.}
 }
 
@@ -402,6 +404,7 @@ year = {2018}
   number={2},
   pages={208--228},
   year={2018},
+  doi = {10.1017/S0033291717001659},
   publisher={Cambridge University Press}
 }
 
@@ -601,6 +604,7 @@ year = {2018}
   number={1},
   pages={159},
   year={2015},
+  doi = {10.1186/s12966-015-0314-1},
   publisher={BioMed Central}
 }
 
@@ -776,6 +780,7 @@ year = {1995}
   number={2},
   pages={216--220},
   year={2012},
+  doi = {10.1016/j.bodyim.2011.11.004},
   publisher={Elsevier}
 }
 
@@ -787,6 +792,7 @@ year = {1995}
   number={7},
   pages={573--578},
   year={2011},
+  doi = {10.1002/eat.20868},
   publisher={Wiley Online Library}
 }
 
@@ -808,6 +814,7 @@ year = {1995}
   number={1},
   pages={1--39},
   year={2010},
+  doi = {10.1348/135910709X466063},
   publisher={Wiley Online Library}
 }
 
@@ -832,12 +839,16 @@ year = {1995}
   publisher = {Chapman and Hall/CRC}
 }
 
-@article{hoogendoorn2017,
-  title={Machine Learning for the Quantified Self},
-  author={Hoogendoorn, Mark and Funk, Burkhardt},
+@book{hoogendoorn2017,
+  title={Machine Learning for the Quantified Self: On the Art of Learning from Sensory Data},
+  author={Hoogendoorn, M. and Funk, Burkhardt},
+  isbn={9783319663081},
+  series={Cognitive Systems Monographs},
+  url={https://books.google.nl/books?id=WZs3DwAAQBAJ},
   year={2017},
-  publisher={Springer}
+  publisher={Springer International Publishing}
 }
+
 
 @Article{Hufford2002,
   author  = {Hufford, Michael R. and Shields, Alan L. and Shiffman, Saul and Paty, Jean and Balabanis, Mark},
@@ -877,6 +888,7 @@ year = {1995}
   number={3},
   pages={e020537},
   year={2018},
+  doi = {10.1136/bmjopen-2017-020537},
   publisher={British Medical Journal Publishing Group}
 }
 
@@ -888,6 +900,7 @@ year = {1995}
   journal = {Frontiers in Behavioral Neuroscience},
   pmid = {24834040},
   title = {{Links between Circadian Rhythms and Psychiatric Disease}},
+  doi = {10.3389/fnbeh.2014.00162},
   year = {2014}
 }
 
@@ -912,6 +925,7 @@ year = {1995}
   number={1},
   pages={113},
   year={2016},
+  doi = {10.1186/s12888-016-0818-5},
   publisher={BioMed Central}
 }
 
@@ -937,6 +951,7 @@ year = {1995}
   number={9},
   pages={1211--1223},
   year={2016},
+  doi = {10.1007/s00127-016-1277-5},
   publisher={Springer}
 }
 
@@ -1086,22 +1101,24 @@ year = {1999}
 
 @article{Meijden2016,
   title={Individual differences in sleep timing relate to melanopsin-based phototransduction in healthy adolescents and young adults},
-  author={{Van Der Meijden}, Wisse P and {Van Someren}, Jamie L and {Te Lindert}, Bart HW and Bruijel, Jessica and {Van Oosterhout}, Floor and Coppens, Joris E and Kalsbeek, Andries and Cajochen, Christian and Bourgin, Patrice and {Van Someren}, Eus JW},
+  author={{Van der Meijden}, Wisse P and {Van Someren}, Jamie L and {Te Lindert}, Bart HW and Bruijel, Jessica and {Van Oosterhout}, Floor and Coppens, Joris E and Kalsbeek, Andries and Cajochen, Christian and Bourgin, Patrice and {Van Someren}, Eus JW},
   journal={Sleep},
   volume={39},
   number={6},
   pages={1305--1310},
   year={2016},
+  doi = {10.5665/sleep.5858},
   publisher={Oxford University Press}
 }
 
 @article{mikus2018,
   title={Predicting short term mood developments among depressed patients using adherence and ecological momentary assessment data},
-  author={Mikus, Adam and Hoogendoorn, Mark and Rocha, Artur and Gama, Joao and Ruwaard, Jeroen and Riper, Heleen},
+  author={Mikus, Adam and Hoogendoorn, M. and Rocha, Artur and Gama, Joao and Ruwaard, Jeroen and Riper, Heleen},
   journal={Internet interventions},
   volume={12},
   pages={105--110},
   year={2018},
+  doi = {10.1016/j.invent.2017.10.001},
   publisher={Elsevier}
 }
 
@@ -1190,6 +1207,7 @@ year = {1999}
   number={1},
   pages={21},
   year={2012},
+  doi = {10.1186/1743-0003-9-21},
   publisher={BioMed Central}
 }
 
@@ -1263,6 +1281,7 @@ year = {1999}
   number={1},
   pages={25},
   year={2016},
+  doi = {10.1016/S2215-0366(18)30053-1},
   publisher={BioMed Central}
 }
 
@@ -1284,18 +1303,20 @@ year = {1999}
   volume={12},
   pages={176--180},
   year={2018},
+  doi = {10.1016/j.invent.2018.03.003},
   publisher={Elsevier}
 }
 
 
 @article{Roenneberg2003,
-  title={Life between clocks: aDily temporal patterns of human chronotypes},
+  title={Life between clocks: Daily temporal patterns of human chronotypes},
   author={Roenneberg, Till and Wirz-Justice, Anna and Merrow, Martha},
   journal={Journal of biological rhythms},
   volume={18},
   number={1},
   pages={80--90},
   year={2003},
+  doi = {10.1177/0748730402239679},
   publisher={Sage Publications}
 }
 
@@ -1319,7 +1340,8 @@ year = {1999}
   journal = {Biological Rhythm Research},
   year = {1999},
   volume = {30},
-  pages = {178-201},
+  doi = {10.1076/brhm.30.2.178.1422},
+  pages = {178-201}
 }
 
 @Article{russell1980circumplex,
@@ -1330,7 +1352,8 @@ year = {1999}
   volume    = {39},
   number    = {6},
   pages     = {1161},
-  publisher = {American Psychological Association},
+  doi       = {10.1037/h0077714},
+  publisher = {American Psychological Association}
 }
 
 @article{ruwaard2009,
@@ -1401,6 +1424,7 @@ year = {1999}
   number={6},
   pages={540--545},
   year={2017},
+  doi = {10.1002/da.22649},
   publisher={Wiley Online Library}
 }
 
@@ -1424,6 +1448,7 @@ year = {1999}
   number={3},
   pages={197--202},
   year={2016},
+  doi = {10.1089/g4h.2015.0046},
   publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
 }
 
@@ -1463,6 +1488,7 @@ year = {1999}
   volume={7},
   pages={172--178},
   year={2017},
+  doi = {10.1016/j.conctc.2017.07.003},
   publisher={Elsevier}
 }
 
@@ -1517,6 +1543,7 @@ year = {1999}
   number={2},
   pages={213},
   year={2016},
+  url={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4969708/},
   publisher={Les Laboratoires Servier}
 }
 
@@ -1583,7 +1610,7 @@ year = {1999}
 
 @inproceedings{vanBreda2016,
   title={A feature representation learning method for temporal datasets},
-  author={{Van Breda}, Ward and Hoogendoorn, Mark and Eiben, AE and Andersson, Gerhard and Riper, Heleen and Ruwaard, Jeroen and Vernmark, Kristofer},
+  author={{Van Breda}, Ward and Hoogendoorn, M. and Eiben, AE and Andersson, Gerhard and Riper, Heleen and Ruwaard, Jeroen and Vernmark, Kristofer},
   booktitle={Computational Intelligence (SSCI), 2016 IEEE Symposium Series on},
   pages={1--8},
   year={2016},
@@ -1592,7 +1619,7 @@ year = {1999}
 
 @inproceedings{vanBreda2016_exploring,
   title={Exploring and comparing machine learning approaches for predicting mood over time},
-  author={{Van Breda}, Ward and Pastor, Johnno and Hoogendoorn, Mark and Ruwaard, Jeroen and Asselbergs, Joost and Riper, Heleen},
+  author={{Van Breda}, Ward and Pastor, Johnno and Hoogendoorn, M. and Ruwaard, Jeroen and Asselbergs, Joost and Riper, Heleen},
   booktitle={International Conference on Innovation in Medicine and Healthcare},
   pages={37--47},
   year={2016},
@@ -1600,7 +1627,7 @@ year = {1999}
 }
 
 @article{VanBreda2018,
-  author = {{Van Breda}, Ward and Bremer, Vincent and Becker, Dennis and Hoogendoorn,   Mark and Funk, Burkhardt and Ruwaard, Jeroen and Riper, Heleen},
+  author = {{Van Breda}, Ward and Bremer, Vincent and Becker, Dennis and Hoogendoorn, M. and Funk, Burkhardt and Ruwaard, Jeroen and Riper, Heleen},
   doi = {10.1016/j.invent.2017.08.003},
   isbn = {22147829 (ISSN)},
   issn = {22147829},
@@ -1657,6 +1684,7 @@ year = {1999}
  author = {Saunders, K. and Palmius, N. and de Vos, M. and Bilderbeck, A. and Geddes, J. and Goodwin, G.},
  journal = {Bipolar Disorders},
  title = {{Depression detection in bipolar disorder using geolocation data}},
+ doi = {10.1109/TBME.2016.2611862},
  year = {2016}
 }
 
@@ -1668,6 +1696,7 @@ year = {1999}
   volume={6},
   pages={1038},
   year={2015},
+  doi = {10.3389/fpsyg.2015.01038},
   publisher={Frontiers}
 }
 
@@ -1691,6 +1720,7 @@ year = {1999}
   number={1550},
   pages={2163--2176},
   year={2010},
+  doi = {10.1098/rstb.2010.0090},
   publisher={The Royal Society}
 }
 
@@ -1764,15 +1794,20 @@ year = {1999}
 }
 
 
-@book{VanSomeren2011,
-  author = {{Van Someren}, Eus J W},
-  booktitle = {Handbook of Clinical Neurology},
-  doi = {10.1016/B978-0-444-52006-7.00004-6},
-  isbn = {9780444520067},
-  issn = {00729752},
-  pmid = {21056179},
-  title = {{Actigraphic monitoring of sleep and circadian rhythms}},
-  year = {2011}
+
+@incollection{VanSomeren2011,
+title = {Chapter 4 - Actigraphic monitoring of sleep and circadian rhythms},
+editor = {Pasquale Montagna and Sudhansu Chokroverty},
+series = {Handbook of Clinical Neurology},
+publisher = {Elsevier},
+volume = {98},
+pages = {55 - 63},
+year = {2011},
+booktitle = {Sleep Disorders Part I},
+issn = {0072-9752},
+doi = {https://doi.org/10.1016/B978-0-444-52006-7.00004-6},
+url = {http://www.sciencedirect.com/science/article/pii/B9780444520067000046},
+author = {{Van Someren}, Eus J W},
 }
 
 
@@ -1783,6 +1818,7 @@ year = {1999}
   volume={18},
   number={6},
   year={2016},
+  doi = {10.2196/jmir.5642},
   publisher={JMIR Publications Inc.}
 }
 
@@ -1817,6 +1853,7 @@ year = {1999}
   volume={181},
   number={1},
   pages={339--343},
+  doi = {10.3233/978-1-61499-121-2-339},
   year={2012}
 }
 
@@ -1855,6 +1892,7 @@ year = {1999}
   volume    = {98},
   number    = {2},
   pages     = {219},
+  doi       = {10.1037/0033-2909.98.2.219},
   publisher = {American Psychological Association},
 }
 
