--- a/R.Rmd
+++ b/R.Rmd
@@ -272,6 +272,7 @@ Dataset > From SPSS`, in RStudio's top-right pane).
 
 ### Installing R-packages from GitHub
 \index{GitHub}
+\index{Packages!emaph}
 
 Not all packages are at CRAN. Many 'unofficial' packages are shared at a site
 called 'GitHub'. This book's companion R package `emaph`, for example, which
@@ -435,6 +436,7 @@ since excellent resources are readily available. A selection is presented below.
 
 
 ### Learn R, in R
+\index{Packages!swirl}
 
 Package `swirl` contains a set of interactive courses that teach many aspects
 of the R language. See <http://swirlstats.com>
