--- a/R.Rmd
+++ b/R.Rmd
@@ -25,8 +25,8 @@ should you invest in R?
     for something that you can get for free?
 
   - R is cutting-edge. Methodological innovations first appear in R. Network
-    analyses, for example (see Chapter \@ref(lmm)), can be run in R, but not
-    (yet) in SPSS. For some analyses, you need this alternative.
+    analyses, for example, can be run in R, but not (yet) in SPSS. For some
+    analyses, you need this alternative.
 
   - Mastering R improves your connection to the statisticians in your team. They
     probably prefer R over SPSS. It is more efficient and less error-prone to
